# cfd-simulation

./: .gitignore  CMakeLists.txt  README.md  cavity.cfg  heat2d.cfg  heat2d_disk.cfg  heat2d_obstacle.cfg
apps/: cavity_main.cpp  heat2d_disk_main.cpp  heat2d_main.cpp  heat2d_obstacle_main.cpp
include/: Config.hpp  IBoundaryCondition.hpp  IGrid.hpp  IPDESolver.hpp  IRenderer.hpp
src/engine/: HeatSolver.hpp  NavierStokesSolver.hpp  PressureSolver.hpp  UniformGrid.hpp
src/engine/bc/: DirichletBC.hpp  LidDrivenBC.hpp  NeumannBC.hpp
src/validation/: GhiaValidator.hpp
src/viz/: CSVExporter.hpp  Colormap.hpp  SDL2Renderer.hpp
